fix for preview detail edit picture not showing up

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -176,20 +176,16 @@ a:active { color: $default_text_color; text-decoration: none; }
     height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
-    /*transform:translateX(0%);
-    transition-property: translateX;*/
     transition-property: left;
     transition-duration:0.250s;   
-    z-index:99; /* temp fix for chrome */
+    z-index:99;
 }
 
 .app-slide-none {
-    /*transform:translateX(0%);*/
     left:0%;
 }
 
 .app-slide-right {
-    /*transform:translateX(92%);*/
     left:92%;
 }
 
@@ -201,7 +197,6 @@ a:active { color: $default_text_color; text-decoration: none; }
     position: absolute;
     width: 100%;
     height: 100%;
-    /*-webkit-transform:translate3d(0,0,0);*/
 }
 
 .stage-center {
@@ -210,21 +205,77 @@ a:active { color: $default_text_color; text-decoration: none; }
 }
 
 .stage-left {
-    /*transform:translateX(-100%);*/
     left: -100%;
 }
 
 .stage-right {
-    /*transform:translateX(100%);*/
     left: 100%;
 }
 
 .stage-hidden {
     display:none;
 }
-/* look into this */
+
 .transition {
     -moz-transition-duration: .375s;
     -webkit-transition-duration: .375s;
     -o-transition-duration: .375s;
 }
+
+
+
+
+/*harald*/
+/*#appContainer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transform:translateX(0%);
+    transition-property: translateX;
+    transition-duration:0.250s;  
+    transition-timing-function: ease-out; 
+    z-index:99; 
+}
+
+.app-slide-none {
+    transform:translateX(0%);
+}
+
+.app-slide-right {
+    transform:translateX(92%);
+}
+
+.nav-hidden {
+    display:none;
+}
+
+.page {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.stage-center {
+    top: 0;
+    left: 0;
+}
+
+.stage-left {
+    transform:translateX(-100%);
+}
+
+.stage-right {
+    transform:translateX(100%);
+}
+
+.stage-hidden {
+    display:none;
+}
+
+.transition {
+    -moz-transition-duration: .375s;
+    -webkit-transition-duration: .375s;
+    -o-transition-duration: .375s;
+}*/
